--- a/python/fatcat_web/templates/release_references.html
+++ b/python/fatcat_web/templates/release_references.html
@@ -1,4 +1,4 @@
-{% set entity = release %}
+{% set release = entity %}
 {% set entity_view = "references" %}
 {% set entity_type = "release" %}
 {% import "entity_macros.html" as entity_macros %}
