--- a/python/fatcat_web/templates/fileset_view.html
+++ b/python/fatcat_web/templates/fileset_view.html
@@ -1,25 +1,12 @@
 {% set fileset = entity %}
+{% set entity_view = "overview" %}
 {% import "entity_macros.html" as entity_macros %}
-{% extends "base.html" %}
+{% extends "entity_base.html" %}
 
-{% block fullbody %}
-
-<div class="ui stackable mobile reversed grid centered">
-<div class="one wide column"></div>
-<div class="fifteen wide column">
-  <h1 class="ui header">
-  <span class="sub header"><code>fileset {{ entity.ident }}</code></span></h1>
-</div>
-</div>
+{% block entity_main %}
 
 <div class="ui stackable mobile reversed grid centered">
-<div class="one wide column"></div>
-<div class="ten wide column" style="font-size: 16px;">
-
-{% if entity.extra %}
-  <h3>Extra Metadata (raw JSON)</h3>
-  {{ entity_macros.extra_metadata(entity.extra) }}
-{% endif %}
+<div class="column" style="font-size: 16px; flex: 1;">
 
 <h3>Releases</h3>
 {% if entity.releases != [] %}
@@ -62,7 +49,7 @@ No known public URL, mirror, or archive for this File Set.
 {% endif %}
 
 </div>
-<div class="five wide column">
+<div class="column" style="flex: 0 0 24em;">
 
 {% if fileset._total_size != None %}
 <div class="ui segment attached">
@@ -74,6 +61,5 @@ No known public URL, mirror, or archive for this File Set.
 
 </div>
 </div>
-
 
 {% endblock %}
