--- a/python/fatcat_web/templates/work_view.html
+++ b/python/fatcat_web/templates/work_view.html
@@ -1,25 +1,12 @@
 {% set work = entity %}
+{% set entity_view = "overview" %}
 {% import "entity_macros.html" as entity_macros %}
-{% extends "base.html" %}
+{% extends "entity_base.html" %}
 
-{% block fullbody %}
-
-<div class="ui stackable mobile reversed grid centered">
-<div class="one wide column"></div>
-<div class="fifteen wide column">
-  <h1 class="ui header">
-  <span class="sub header"><code>work {{ work.ident }}</code></span></h1>
-</div>
-</div>
+{% block entity_main %}
 
 <div class="ui stackable mobile reversed grid centered">
-<div class="one wide column"></div>
-<div class="ten wide column" style="font-size: 16px;">
-
-{% if entity.extra != None %}
-  <h3>Extra Metadata (raw JSON)</h3>
-  {{ entity_macros.extra_metadata(entity.extra) }}
-{% endif %}
+<div class="column" style="font-size: 16px; flex: 1;">
 
 <h3>Releases</h3>
 {% if work._releases != [] and work._releases != None %}
@@ -39,8 +26,7 @@ pre-print and a published article may contain small differences, but still
 reference the same underlying "work".
 
 </div>
-
-<div class="five wide column">
+<div class="column" style="flex: 0 0 24em;">
 
 {{ entity_macros.fatcat_bits(entity, "work", "", editgroup) }}
 
