--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -27,7 +27,8 @@
 </div>
 
 <div class="ui vertical stripe segment">
-  <div class="ui centered grid">
+  <div class="ui text container" style="max-width: 800px!important;">
+  <div class="ui centered equal grid">
     <div class="row">
       <div class="four wide mobile three wide center aligned column">
         <a href="/stats" style="color: black;">
@@ -46,18 +47,18 @@
       </div>
     </div>
   </div>
+  </div>
 </div>
 
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em;">
-  <div class="ui text container">
+  <div class="ui text container" style="max-width: 800px!important;">
   <div class="ui centered grid">
     <div class="row">
       <div class="four wide column">
         <!-- TODO: don't let it scale down -->
-        <img src="https://ia800105.us.archive.org/20/items/OA-JOURNAL-TESTCRAWL-TWO-2018/papers.gif" width="130px">
+        <img src="/static/paper_man_confused.gif" width="130px">
       </div>
-      <!-- TODO: larger font size -->
-      <div class="twelve wide column" style="font-size: 1.1rem;">
+      <div class="twelve wide column" style="font-size: 1.2rem;">
         <p><b>Fatcat is a versioned, user-editable catalog of research
         publications including journal articles, conference proceedings, and
         datasets</b>
@@ -73,11 +74,10 @@
 </div>
 
 <div class="ui vertical stripe segment" style="padding-top: 2em; padding-bottom: 2em; background-color: #F5F5F5;">
-  <div class="ui text container">
+  <div class="ui text container" style="max-width: 800px!important;">
   <div class="ui centered grid">
     <div class="row">
-      <!-- TODO: larger font size -->
-      <div class="twelve wide column" style="font-size: 1.1rem;">
+      <div class="twelve wide column" style="font-size: 1.2rem;">
         <p>The fatcat servcie is developed and hosted at <b><a
         href="https://archive.org">The Internet Archive</a></b>, a US
         non-profit dedicated to providing Universal Access to All Knowledge.
@@ -87,7 +87,7 @@
         web which could otherwise be lost.
       </div>
       <div class="four wide column">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Internet_Archive_logo_and_wordmark.svg/250px-Internet_Archive_logo_and_wordmark.svg.png" width="140px">
+        <img src="/static/ia_logo_text.png" width="140px">
       </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
 <br>
 
 <center>
-<table class="ui single line unstackable table centered" style="max-width: 750px;">
+<table class="ui single line unstackable table centered" style="max-width: 800px; font-size: 1.1rem;">
 <thead>
 <tr><th>Entity Type
     <th>Actions
