--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -110,7 +110,7 @@ Raw query was: <i>{{ found.query.q }}</i>
 <div class="ui centered stackable grid" style="padding-top: 15%;">
   <div class="row">
     <div class="four wide column">
-      <img src="https://ia800105.us.archive.org/20/items/OA-JOURNAL-TESTCRAWL-TWO-2018/papers.gif">
+      <img src="/static/paper_man_confused.gif">
     </div>
     <div class="six wide column">
   <h2>No results found!</h2>
