typos and HTML validation

--- a/python/fatcat_web/templates/container_search.html
+++ b/python/fatcat_web/templates/container_search.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="ui container text">
-<br clear="all" />
+<br>
 
 {% if found %}
 {% if found.results %}
@@ -50,7 +50,7 @@ Raw query was: <i>{{ found.query.q }}</i>
 <div class="ui centered stackable grid" style="padding-top: 15%;">
   <div class="row">
     <div class="four wide column">
-      <img src="/static/paper_man_confused.gif">
+      <img src="/static/paper_man_confused.gif" alt="confused paper man">
     </div>
     <div class="six wide column">
   <h2>No results found!</h2>
